--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "flexlayout",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Sticky header and footer",
   "scripts": {
     "start": "lite-server --baseDir=\"app\""
   },
-  "author": "",
+  "author": "AlexLeoDEV",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4"
